kubernetes/4.3.3_gateway_api_envoy_gateway_official_example_multi_apps/app1/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
    service: backend
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: backend
