kubernetes/4.3.3_gateway_api_envoy_gateway_official_example_multi_apps/app1/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
spec:
  parentRefs:
    - name: eg
      namespace: gateway-infra
      sectionName: http
  hostnames:
    - "demo1.example.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
